eks/network/traefik/ingress-nodejs.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nodejs-app-ingress
  namespace: simple-nodejs-app
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`k8s-traefik-traefik-b29027a8f9-d82e520fea029e25.elb.us-west-2.amazonaws.com`) || Host(`nodejs-app.local`)
    services:
    - name: service-nodejs-app
      port: 80
